Added one more user-defined style (to style.css), use it in index.html and contact.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,3 +46,7 @@ em.bb b { background-position: 100% -30px; left: 4px; }
   font-weight: 300;
   line-height: 1.4;
 }
+
+.ksenia-h2{
+  color: gray
+}
