--- a/templates/contact.html
+++ b/templates/contact.html
@@ -66,7 +66,7 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4">
-          <h2>Director</h2>
+          <h2 class ="ksenia-h2">Director</h2>
           <h3>Name: Alex Ivanov</h3>
           <h4>Skype: aivanov</h4>
           <h4>Email: aivanov@gmail.com</h4>
@@ -75,7 +75,7 @@
           <p><a class="btn btn-default" href="contact.html" role="button">View details »</a></p>
         </div>
         <div class="col-md-4">
-          <h2>Manager</h2>
+          <h2 class ="ksenia-h2">Manager</h2>
           <h3>Name: Ivan Petrov</h3>
           <h4>Skype: ipetrov</h4>
           <h4>Email: ipetrov@gmail.com</h4>
@@ -84,7 +84,7 @@
           <p><a class="btn btn-default" href="contact.html" role="button">View details »</a></p>
        </div>
         <div class="col-md-4">
-          <h2>Founder</h2>
+          <h2 class ="ksenia-h2">Founder</h2>
           <h3>Name: John Smith</h3>
           <h4>Skype: jsmith</h4>
           <h4>Email: jsmith@gmail.com</h4>
