Added more colors to style.css (and use them in *.html-files)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -50,3 +50,10 @@ em.bb b { background-position: 100% -30px; left: 4px; }
 .ksenia-h2{
   color: gray
 }
+
+.ksenia-color1{
+  color: blue
+}
+.ksenia-color2{
+  color: green
+}
