--- a/templates/contact.html
+++ b/templates/contact.html
@@ -69,8 +69,8 @@
           <h2 class ="ksenia-h2">Director</h2>
           <h3>Name: Alex Ivanov</h3>
           <h4>Skype: aivanov</h4>
-          <h4>Email: aivanov@gmail.com</h4>
-          <h4>Phone: 12-34-56</h4>
+          <h4 class ="ksenia-color2">Email: aivanov@gmail.com</h4>
+          <h4 class ="ksenia-color1">Phone: 12-34-56</h4>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-default" href="contact.html" role="button">View details »</a></p>
         </div>
@@ -78,8 +78,8 @@
           <h2 class ="ksenia-h2">Manager</h2>
           <h3>Name: Ivan Petrov</h3>
           <h4>Skype: ipetrov</h4>
-          <h4>Email: ipetrov@gmail.com</h4>
-          <h4>Phone: 22-33-55</h4>
+          <h4 class ="ksenia-color2">Email: ipetrov@gmail.com</h4>
+          <h4 class ="ksenia-color1">Phone: 22-33-55</h4>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-default" href="contact.html" role="button">View details »</a></p>
        </div>
@@ -87,8 +87,8 @@
           <h2 class ="ksenia-h2">Founder</h2>
           <h3>Name: John Smith</h3>
           <h4>Skype: jsmith</h4>
-          <h4>Email: jsmith@gmail.com</h4>
-          <h4>Phone: +38050123456789</h4>
+          <h4 class ="ksenia-color2">Email: jsmith@gmail.com</h4>
+          <h4 class ="ksenia-color1">Phone: +38050123456789</h4>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
           <p><a class="btn btn-default" href="contact.html" role="button">View details »</a></p>
         </div>
