Added some text Director manager and Founder in contact.html

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -41,7 +41,7 @@
         <nav>
           <ul class="nav nav-justified">
             <li><a href="index.html">Main</a></li>
-            <li class="active"><a href="#">Contacts</a></li>
+            <li class="active"><a href="contact.html">Contacts</a></li>
           </ul>
         </nav>
       </div>
@@ -58,6 +58,7 @@
         <div class="col-lg-4">
           <h2>Manager</h2>
           <img src="../static/images/director.jpg" class="img-responsive img-rounded">
+          <p>Manager course</p>
           <p>Name: Алена Чайка</p>
           <p>Skype: alena.itbursa</p>
           <p>Email: alena.itbursa@gmail.com</p>
@@ -66,6 +67,7 @@
         <div class="col-lg-4">
           <h2>Director</h2>
           <img src="../static/images/manager.jpg" class="img-responsive img-rounded">
+          <p>Director course</p>
           <p>Name: Дария Михалевич</p>
           <p>Skype: darka.darka.darka.darka.</p>
           <p>Email: daria.mykhalevych@gmail.com</p>
@@ -74,6 +76,7 @@
         <div class="col-lg-4">
           <h2>Founder</h2>
           <img src="../static/images/osnovatel.jpg" class="img-responsive img-rounded">
+          <p>Founder course</p>
           <p>Name: Павел Обод</p>
           <p>Skype: azaless</p>
           <p>Email: itbursa100@gmail.com</p>
