--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
         <h3 class="text-muted">Pybursa</h3>
         <nav>
           <ul class="nav nav-justified">
-            <li class="active"><a href="#">Main</a></li>
+            <li class="active"><a href="index.html">Main</a></li>
             <li><a href="contact.html">Contacts</a></li>
           </ul>
         </nav>
