Added new saite version1.1

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -10,25 +10,25 @@
 </head>
 
 <body>
-	
+
 	<div class="container">
       <div class="header">
         <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation"><a href="index.html">Main</a></li>
-            <li role="presentation"><a href="contacts.html">Contacts</a></li>
+            <li role="presentation"><a href="contact.html">Contacts</a></li>
           </ul>
         </nav>
         <h1 class="text-muted"><a href="index.html">PyBursa</a></h1>
       </div>
-   
-	
+
+
 
 	    <div class="jumbotron">
-        
+
         <p class="lead">During an orientation for new students at Stanford, Sergey Brin met Larry Page. They "became intellectual soul-mates and close friends". Brin's focus was on developing data mining systems while Page's was in extending "the concept of inferring the importance of a research paper from its citations in other papers". Together, the pair authored a paper titled.</p>
       </div>
-    </div> 
+    </div>
   </div>
 
   <hr>
@@ -38,7 +38,7 @@
       <div class="row">
         <h1>CONTACTS</h1>
       </div>
-      
+
       <div class="row">
         <div class="col-md-4">
           <h2>Director</h2>
@@ -46,42 +46,42 @@
             <p>Phone: (615) 953-1087</p>
             <p>Skype: s_brin</p>
             <p>E-mail: brin@gmail.com</p>
-            <p>Adress: 1803 9th Los Altos, TN 37208 
+            <p>Adress: 1803 9th Los Altos, TN 37208
 United States</p>
         </div>
-        
+
         <div class="col-md-4">
           <h2>Manager</h2>
             <p>Name: Jan Koum</p>
             <p>Phone: (610) 897-1112</p>
             <p>Skype: j_koum</p>
             <p>E-mail: koum@gmail.com</p>
-            <p>Adress: Mountain View, TN 85859 
+            <p>Adress: Mountain View, TN 85859
 United States</p>
         </div>
-          
+
         <div class="col-md-4">
           <h2>Founder</h2>
             <p>Name: Max Levchin</p>
             <p>Phone: (933) 779-4482</p>
             <p>Skype: m_levchin</p>
             <p>E-mail: levchin@gmail.com</p>
-            <p>Adress: Palo Alto, TN 99080 
+            <p>Adress: Palo Alto, TN 99080
 United States </p>
         </div>
       </div>
     </div>
   </div>
-	
+
 	<hr class="contacts">
 
 	<div class="container">
 	  <div class="row">
 	    <footer class="footer">
           <p>Copyright © 2015 PyBursa, Inc. All Rights Reserved</p>
-            </footer>	
+            </footer>
 	  </div>
 	</div>
-   
+
 </body>
 </html>
