--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -10,13 +10,13 @@
 </head>
 
 <body>
-	
+
 	<div class="container">
       <div class="header">
         <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation"><a href="index.html">Main</a></li>
-            <li role="presentation"><a href="contacts.html">Contacts</a></li>
+            <li role="presentation"><a href="contact.html">Contacts</a></li>
           </ul>
         </nav>
         <h1 class="text-muted"><a href="index.html">PyBursa</a></h1>
@@ -27,27 +27,27 @@
         <p class="lead">Learn to program in Python, a powerful language used by sites like YouTube and Dropbox.</p>
         <p><a class="btn btn-lg btn-success" href="index.html" role="button">Let's Start!</a></p>
       </div>
-    </div> 
-	
+    </div>
+
 	<hr>
 
     <div class="learn-more">
 	  <div class="container">
 	    <div class="row">
-    	  <h1>DESCRIPTION</h1>
+    	  <h1>Description</h1>
         </div>
-	    
+
 	    <div class="row">
 		  <div class="col-md-4">
 		    <h2>Program</h2>
 			  <p>Complete 4 courses in the suggested order.</p>
 		  </div>
-          
+
           <div class="col-md-4">
             <h2>Capstone Project</h2>
 			  <p>Tackle the Capstone Project, designed to apply skills you’ve learned.</p>
 		  </div>
-          
+
           <div class="col-md-4">
 		    <h2>Certificate</h2>
 			  <p>Earn a Certificate to share your success with the world.</p>
@@ -55,16 +55,16 @@
 		</div>
 	  </div>
 	</div>
-	
+
 	<hr>
 
 	<div class="container">
 	  <div class="row">
 	    <footer class="footer">
           <p>Copyright © 2015 PyBursa, Inc. All Rights Reserved</p>
-            </footer>	
+            </footer>
 	  </div>
 	</div>
-    
+
 </body>
 </html>
