--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,10 @@ text-align : center;
 {
 background-color: rgba(238, 238, 238 , 0.7);
 }
+.transparant-background-table
+{
+background-color: rgba(238, 238, 238 , 0.8);
+}
 
 .text-align-justify
 {
