--- a/templates/contact.html
+++ b/templates/contact.html
@@ -39,6 +39,7 @@
             <!--<span class="sr-only">(current)</span>-->
             </a></li>
             <li class="active"><a href="contact.html">Contacts</a></li>
+            <li><a href="student_list.html">Students</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
