--- a/templates/index.html
+++ b/templates/index.html
@@ -39,6 +39,7 @@
             <!--<span class="sr-only">(current)</span>-->
             </a></li>
             <li><a href="contact.html">Contacts</a></li>
+            <li><a href="student_list.html">Students</a></li>
           </ul>
         </div>
       </div>
