--- a/templates/contact.html
+++ b/templates/contact.html
@@ -7,7 +7,6 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
 
     <title>Our Team | Contacts</title>
 
@@ -59,7 +58,7 @@
           <h2>Manager</h2>
           <img src="../static/images/director.jpg" class="img-responsive img-rounded">
           <p>Manager course</p>
-          <p>Name: Алена Чайка</p>
+          <p><b>Name:</b> Алена Чайка</p>
           <p>Skype: alena.itbursa</p>
           <p>Email: alena.itbursa@gmail.com</p>
           <p>Phone: +38 063 625 07 55</p>
@@ -68,7 +67,7 @@
           <h2>Director</h2>
           <img src="../static/images/manager.jpg" class="img-responsive img-rounded">
           <p>Director course</p>
-          <p>Name: Дария Михалевич</p>
+          <p><b>Name:</b> Дария Михалевич</p>
           <p>Skype: darka.darka.darka.darka.</p>
           <p>Email: daria.mykhalevych@gmail.com</p>
           <p>Phone: +38 096 469 15 57</p>
@@ -77,7 +76,7 @@
           <h2>Founder</h2>
           <img src="../static/images/osnovatel.jpg" class="img-responsive img-rounded">
           <p>Founder course</p>
-          <p>Name: Павел Обод</p>
+          <p><b>Name:</b> Павел Обод</p>
           <p>Skype: azaless</p>
           <p>Email: itbursa100@gmail.com</p>
           <p>Phone: +38 096 469 15 57</p>
