--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,6 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
 
     <title>PyBursa - professional courses</title>
 
@@ -46,17 +45,16 @@
       </div>
       <!-- Jumbotron -->
       <div class="jumbotron first_block">
-        <div><h1>Description</h1>
-        <h3>PyBursa - professional courses</h3>
+        <h1>Description</h1>
+        <p>PyBursa, JSBursa, JavaBursa - professional courses</p>
         <p class="lead">Sign up for courses Python. Hit the modern trend. WEB development</p>
-        </div>
+
       </div>
       <hr>
       <div class="jumbotron second_block">
-        <div><h2>Program</h2>
+        <h2>Program</h2>
             <p>Basics of Python. Lines and iterators. Functions and modularity. Libraries and the package manager</p>
-        </div>
-        <p><a class="btn btn-lg btn-success" href="http://pybursa.com/" role="button">Get started today</a></p>
+            <p><a class="btn btn-lg btn-success" href="http://pybursa.com/" role="button">Get started today</a></p>
       </div>
       <!-- Site footer -->
       <footer class="footer">
