--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,7 +16,7 @@ body {
 }
 .first_block {
  text-align: center;
-background-color: #5cb85c;
+background-color: green;
 color: #fff;
 }
 .jumbotron .btn {
@@ -90,4 +90,10 @@ color: #fff;
     padding-right: 0;
     padding-left: 0;
   }
+}
+.text-muted {
+  color: green;
+}
+.col-lg-4 b {
+  color: red;
 }
