Modified students files

--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -58,7 +58,7 @@
               <td>Skype</td>
             </tr>
             <tr>
-            <td><a href="../templates/student_detail.html">1</a></td>
+            <td><a href="student_detail.html">1</a></td>
               <td>Persianova</td>
               <td>Olena</td>
               <td>Ukraine, Kharkiv</td>
