--- a/templates/contact.html
+++ b/templates/contact.html
@@ -7,12 +7,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="http://getbootstrap.com/favicon.ico">
-    
     <title>Contacts</title>
     <link href="../static/css/bootstrap.css" rel="stylesheet">
     <link href="../static/css/style.css" rel="stylesheet">
   </head>
-
   <body>
     <nav class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
@@ -29,11 +27,11 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">Main</a></li>
             <li class="active"><a href="contact.html">Contats</a></li>
+            <li><a href="student_list.html">Students</a></li>
           </ul>
         </div>
       </div>
     </nav>
-
     <div class="row">
       <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
@@ -51,7 +49,7 @@
       </div>
       <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
-          <img src="../static/images/alena.jpg" alt="Alyona Chaika" style="heigth:100px;width:148.5px;">
+          <img src="../static/images/alena.jpg" alt="Alyona Chaika" style="heigth:100px;width:148px;">
           <div class="contact_caption">
             <div>
               <h3 class="title">Manager</h3>
@@ -85,7 +83,6 @@
         <p>&copy; PyBursa 2015</p>
       </footer>
     </div> 
-
 
     <script src="../static/js/jquery.js"></script>
     <script src="../static/js/bootstrap.js"></script>
