Added new saite version1.2

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,28 +6,23 @@
 	<title>Contacts</title>
 	<link rel="stylesheet" href="../static/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="../static/css/style.css">
-  <script src="../static/js/bootstrap.js"></script>
+    <script src="../static/js/bootstrap.js"></script>
 </head>
 
 <body>
 
-	<div class="container">
-      <div class="header">
-        <nav>
-          <ul class="nav nav-pills pull-right">
-            <li role="presentation"><a href="index.html">Main</a></li>
-            <li role="presentation"><a href="contact.html">Contacts</a></li>
-          </ul>
-        </nav>
-        <h1 class="text-muted"><a href="index.html">PyBursa</a></h1>
-      </div>
-
-
-
-	    <div class="jumbotron">
-
-        <p class="lead">During an orientation for new students at Stanford, Sergey Brin met Larry Page. They "became intellectual soul-mates and close friends". Brin's focus was on developing data mining systems while Page's was in extending "the concept of inferring the importance of a research paper from its citations in other papers". Together, the pair authored a paper titled.</p>
-      </div>
+  <div class="container">
+    <div class="header">
+      <nav>
+        <ul class="nav nav-pills pull-right">
+          <li role="presentation"><a href="index.html">Main</a></li>
+          <li role="presentation"><a href="contact.html">Contacts</a></li>
+        </ul>
+      </nav>
+      <h1 class="text-muted"><a href="index.html">PyBursa</a></h1>
+    </div>
+    <div class="jumbotron">
+      <p class="lead">During an orientation for new students at Stanford, Sergey Brin met Larry Page. They "became intellectual soul-mates and close friends". Brin's focus was on developing data mining systems while Page's was in extending "the concept of inferring the importance of a research paper from its citations in other papers". Together, the pair authored a paper titled.</p>
     </div>
   </div>
 
@@ -36,7 +31,7 @@
   <div class="learn-more">
     <div class="container">
       <div class="row">
-        <h1>CONTACTS</h1>
+        <h1>Contacts</h1>
       </div>
 
       <div class="row">
