--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="http://getbootstrap.com/favicon.ico">
-    <title>Main</title>
+    <title>Detail</title>
     <link href="../static/css/bootstrap.css" rel="stylesheet">
     <link href="../static/css/style.css" rel="stylesheet">
   </head>
@@ -79,6 +79,9 @@
                   <td>Richard.Stallman</td>
                 </tr>
                 <tr>
+                  <td>E-mail</td>
+                  <td>richard@stallman.org</td>
+                </tr>
               </tbody>
           </table>
         </div>
