Modified students files

--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -47,8 +47,8 @@
 
     <div class="page-header text-align-center">
       <div class="container">
-      <div class="jumbotron transparant-background">
-          <h2>Students PyBursa</h2>
+        <div class="jumbotron transparant-background">
+          <p class="navbar-text navbar-left">Students of course<a href="contact.html" class="navbar-link">PyBursa</a></p>
            <table class="table text-align-justify">
             <tr>
               <td>No</td>
