--- a/templates/contact.html
+++ b/templates/contact.html
@@ -26,7 +26,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Main</a></li>
-            <li class="active"><a href="contact.html">Contats</a></li>
+            <li class="active"><a href="contact.html">Contacts</a></li>
             <li><a href="student_list.html">Students</a></li>
           </ul>
         </div>
