--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -48,7 +48,7 @@
     <div class="page-header text-align-center">
       <div class="container">
         <div class="jumbotron transparant-background">
-          <p class="navbar-text navbar-left">Students of course<a href="contact.html" class="navbar-link">PyBursa</a></p>
+          <p class="navbar-text navbar-left">Students of course<a href="contact.html" class="navbar-link"><h2>PyBursa</h2></a></p>
            <table class="table text-align-justify">
             <tr>
               <td>No</td>
