--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
+<body class="back">
   <div class="container">
     <!-- Static navbar -->
     <nav class="navbar navbar-default">
@@ -40,10 +40,10 @@
       </div><!--/.container-fluid -->
     </nav>
     <!-- Main component for a primary marketing message or call to action -->
-    <div class="jumbotron transparent list">
-      <h1 class="change">iBursa</h1>
+    <div class="jumbotron transparent list bord">
+      <h1 class="change shad shadred">iBursa</h1>
       <h2 class="change text-uppercase">Description</h2>
-      <p>This course introduces the student to the Python language. Upon
+      <p class="just">This course introduces the student to the Python language. Upon
       completion of this class, the student will be able to write non trivial
       Python programs dealing with a wide variety of subject matter domains.
       Topics include language components, the IDLE environment, control flow
