--- a/templates/contact.html
+++ b/templates/contact.html
@@ -15,7 +15,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
+<body class="back">
   <div class="container">
     <!-- Static navbar -->
     <nav class="navbar navbar-default">
@@ -40,8 +40,8 @@
       </div><!--/.container-fluid -->
     </nav>
     <!-- Main component for a primary marketing message or call to action -->
-    <div class="jumbotron transparent">
-      <h1 class="change">iBursa</h1>
+    <div class="jumbotron transparent bord">
+      <h1 class="change shad shadred">iBursa</h1>
       <h2 class="change">Contacts</h2>
       <hr>
       <ul>
@@ -49,7 +49,7 @@
           <h3 class="director change text-uppercase">Director</h3>
         </li>
         <li style="list-style: none">
-          <img class="img-rounded" height="150" src="../static/images/tim-cook.png">
+          <img class="img-rounded opa" height="150" src="../static/images/tim-cook.png">
           <ul>
             <li><b>Name:</b> Tim Cook</li>
             <li><b>Skype:</b> timcook</li>
@@ -64,7 +64,7 @@
           <h3 class="director change text-uppercase">Manager</h3>
         </li>
         <li style="list-style: none">
-          <img class="img-rounded" height="150" src="../static/images/eddy_cue.png">
+          <img class="img-rounded opa" height="150" src="../static/images/eddy_cue.png">
           <ul>
             <li><b>Name:</b> Eddy Cue</li>
             <li><b>Skype:</b> eddy.cue</li>
@@ -79,7 +79,7 @@
           <h3 class="director change text-uppercase">Founder</h3>
         </li>
         <li style="list-style: none">
-          <img class="img-rounded" height="150" src="../static/images/steve.png">
+          <img class="img-rounded opa" height="150" src="../static/images/steve.png">
           <ul>
             <li><b>Name:</b> Steve Jobs</li>
             <li><b>Skype:</b> ---</li>
