Added new saite version1.4

--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
 		  </div>
 
           <div class="col-md-4">
-		    <h2>PyBursa Certificate</h2>
+		    <h2>PyBursa</h2>
 			  <p>Earn a Certificate to share your success with the world.</p>
 		  </div>
 		</div>
