Modified students files

--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -82,6 +82,15 @@
               <td>Skype</td>
               <td>olena.persianova</td>
             </tr>
+             <tr>
+              <td>Average Grade</td>
+              <td>99.9</td>
+            </tr>
+            </tr>
+             <tr>
+              <td>Rating</td>
+              <td>20</td>
+            </tr>
           </table>
         </div>
       </div>
