--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
         <div class="container-fluid">
           <div class="navbar-header">
             <a class="navbar-brand" href="index.html">
-              <img id="logo" alt="logo" src="../static/images/logo_itbursa.png"/>
+              <img class="logo" alt="logo" src="../static/images/logo_itbursa.png"/>
             </a>
           </div>
             <ul class="nav nav-pills">
@@ -36,14 +36,22 @@
       <div class="container headline">
         <div class="starter-template">
           <h1>PyBursa</h1>
-          <h2>Description</h2>
+          <div class="jumbotron">
+            <h2>Description</h2>
+              <p class="prenames">В этом курсе мы сместили акцент в сторону практики.</br>
+Будет умеренное количество теории - максимум практики.
+Примерное соотношение теории и практики: 30% на 70%.</br>
+Курсы будут проходить с 19 октября по 28 декабря.
+Практические занятия в аудитории + онлайн лекции.</p>
+          </div>
         </div>
       </div>
-
+      <div class="starter-template active">
+        <h2>Program</h2>
+      </div>
       <div class="jumbotron">
           <h4>OCTOBER 19, 2015</h4>
-          <p>
-            <pre>Добрый день, дорогие студенты!
+          <pre class="text1">Добрый день, дорогие студенты!
 
 Сегодня вам стали доступны теоритические материалы первой недели, вы можете смотреть видео, проходить тесты на закрепление полученых знаний, обсуждать их на форуме.
 
@@ -55,15 +63,13 @@
 
 23-го октября, в пятницу, станет доступно второе КЗ. Его дедлайн будет до конца дня 25 октября.
 
-Успехов в освоении основ Python!
-            </pre>
-          </p>
+Успехов в освоении основ Python!</pre>
         </div>
 
 
       <div class="jumbotron">
         <h4>OCTOBER 19, 2015</h4>
-        <p><pre>Уважаемые студенты!
+        <pre class="text1">Уважаемые студенты!
 
 Внесены корректировки в тестовые задания:
 
@@ -73,12 +79,12 @@
 
 - № 3,12,15,16 ПРАКТИЧЕСКОГО ЗАДАНИЯ №1_3 : исправлена система проверки (количество попыток неограничено; если у Вас были ошибки в данных тестах - можете повторно запустить проверку)
 - ПРАКТИЧЕСКОЕ ЗАДАНИЕ №1_4 #2: увеличено количество попыток
-- ПРАКТИЧЕСКОЕ ЗАДАНИЕ №1_7 #2: увеличено количество попыток и уточнена постановка задачи.</pre></p>
-        </div>
+- ПРАКТИЧЕСКОЕ ЗАДАНИЕ №1_7 #2: увеличено количество попыток и уточнена постановка задачи.</pre>
+      </div>
 
         <div class="jumbotron">
-        <h4>OCTOBER 22, 2015</h4>
-        <p><pre>Доступно второе контрольное задание!
+          <h4>OCTOBER 22, 2015</h4>
+          <pre class="text1">Доступно второе контрольное задание!
 
 Сегодня (22.10.2015) стало доступно второе практическое задание.
 
@@ -96,8 +102,7 @@
 
 Если не все условия выполнены - вы можете нажать на строку "See full output" и посмотреть детали о том, каким условиям ваше решение не соответствует.
 
-Если с первого раза решить правильно не получается, то рекомендую решение писать в локальном файле и экспериментировать, не сжигая попытки, после чего переносить правильное решение в систему.</pre></p>
-
+Если с первого раза решить правильно не получается, то рекомендую решение писать в локальном файле и экспериментировать, не сжигая попытки, после чего переносить правильное решение в систему.</pre>
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
