--- a/templates/contact.html
+++ b/templates/contact.html
@@ -25,7 +25,7 @@
         <div class="container-fluid">
           <div class="navbar-header">
             <a class="navbar-brand" href="index.html">
-              <img id="logo" alt="logo" src="../static/images/logo_itbursa.png"/>
+              <img class="logo" alt="logo" src="../static/images/logo_itbursa.png"/>
             </a>
           </div>
             <ul class="nav nav-pills">
