--- a/templates/index.html
+++ b/templates/index.html
@@ -35,6 +35,7 @@
   	<div class="container theme-showcase">
       <div class="jumbotron">
         <div>
+          <h1 class="descr">Welcome to PyBursa</h1>
           <h1 class="descr">Description</h1>
         </div>
         <p class="about">This course is designed to help students with very little or no computing background learn the basics of building simple interactive applications. Our language of choice, Python, is an easy-to learn, high-level computer language that is used in many of the computational courses offered on Coursera. To make learning Python easy, we have developed a new browser-based programming environment that makes developing interactive applications in Python simple. These applications will involve windows whose contents are graphical and respond to buttons, the keyboard and the mouse.
