--- a/templates/index.html
+++ b/templates/index.html
@@ -34,8 +34,9 @@
     <div class="learn-more">
 	  <div class="container">
 	    <div class="row">
-    	  <h1>Description</h1>
+    	  <h1>PyBursa</h1>
         </div>
+        <h1>Description</h1>
 
 	    <div class="row">
 		  <div class="col-md-4">
