--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,9 @@
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <meta content="" name="description">
   <meta content="" name="author">
+
   <title>PyBursa Main</title>
+
   <link href="../static/css/style.css" rel="stylesheet"><!-- Bootstrap -->
   <link href="../static/css/bootstrap.min.css" rel="stylesheet"><!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -37,6 +39,9 @@
           </li>
           <li>
             <a href="contact.html">Contacts</a>
+          </li>
+          <li>
+            <a href="student_list.html">Students</a>
           </li>
         </ul>
       </div>
@@ -86,7 +91,7 @@
         </div>
       </div><!-- Site footer -->
       <footer class="footer">
-        <p>&copy; PyBursa 2015</p>
+        <p>&copy; PyBursa, 2015</p>
       </footer>
     </div>
 
