--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,6 +16,10 @@ h3 {
   color: #F8F8F8 ;
   text-align: left;
 }
+tr {
+  color: #F8F8F8 ;
+  text-align: left;
+}
 p {
   color: #F8F8F8 ;
   text-align: left;
