--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>PyBursa contacts</title>
+    <title>PyBursa students</title>
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
@@ -28,50 +28,68 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Main</a></li>
-            <li class="active"><a href="contact.html">Contacts</a></li>
-            <li><a href="student_list.html">Students</a></li>
+            <li><a href="contact.html">Contacts</a></li>
+            <li class="active"><a href="student_list.html">Students</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
     <div class="container">
-
-      <div class="starter-template">
-        <div class="container">
-          <h1>PyBursa courses</h1>>
-          <h2>Contacts</h2>
-            <div class="pre-scrollable">
-              <div class="thumbnail">
-                <h4 >Director</h4>
-              </div>
-                <ul class="director">
-                  <li class="list">Name: Ivan T</li>
-                  <li class="list">Skype: ivan_t</li>
-                  <li class="list">Email: ivan_t@gmail.com</li>
-                  <li class="list">Phone: (063)0000000</li>
-                </ul>
-              <div class="thumbnail">
-                <h4>Manager</h4>
-              </div>
-                <ul class="manager">
-                  <li class="list">Name:  Kate R</li>
-                  <li class="list">Skype: kate_r</li>
-                  <li class="list">Email: kate_r@gmail.com</li>
-                  <li class="list">Phone: (066)6666666</li>
-                </ul>
-              <div class="thumbnail">
-                <h4>Founder</h4>
-              </div>
-              <ul class="founder">
-                <li class="list">Name:  Nik E</li>
-                <li class="list">Skype: nik_e</li>
-                <li class="list">Email: nik_e@gmail.com</li>
-                <li class="list">Phone: (099)9999999</li>
-              </ul>
-             </div>
-        </div>
+      <div class="container">
+        <h2>PyBursa students</h2>
+          <table class="table table-bordered">
+          <thead>
+            <tr>
+              <th>No</th>
+              <th>Surname</th>
+              <th>Name</th>
+              <th>Address</th>
+              <th>Skype</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><a href="student_detail.html">1</a></td>
+              <td>Monty</td>
+              <td>Python</td>
+              <td>Kharkov</td>
+              <td>rest.monty</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>NLTK</td>
+              <td>Data</td>
+              <td>Kharkov</td>
+              <td>collocations</td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>Beautiful</td>
+              <td>Soup</td>
+              <td>Kharkov</td>
+              <td>bs4</td>
+            </tr>
+            <tr>
+              <td>4</td>
+              <td>Url</td>
+              <td>Lib3</td>
+              <td>Kiev</td>
+              <td>urllib3</td>
+            </tr>
+            <tr>
+              <td>5</td>
+              <td>LXML</td>
+              <td>Parser</td>
+              <td>USA</td>
+              <td>lxml</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
+        <div class="collapse">
+          <p>Text</p>
+        </div>
     </div><!-- /.container -->
 
 
