--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -88,6 +88,9 @@
         </table>
       </div>
         <div class="collapse">
+          <pre   style="text-align:left">
+              python2.7 
+          </pre>
           <p>Text</p>
         </div>
     </div><!-- /.container -->
