--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -113,6 +113,12 @@
         </tr>
       </tbody>
     </table>
+      <div class="collapse">
+          <pre   style="text-align:left">
+             python2.7 
+          </pre>
+        <p>Text</p>
+      </div>
   </div>
 
     <!-- Bootstrap core JavaScript
