--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -113,12 +113,16 @@
         </tr>
       </tbody>
     </table>
+    <div class="starter-template">
       <div class="collapse">
+          <div class="label">
           <pre   style="text-align:left">
              python2.7 
           </pre>
+          </div>
         <p>Text</p>
       </div>
+    </div>
   </div>
 
     <!-- Bootstrap core JavaScript
