--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -74,11 +74,14 @@
               <td>4</td>
               <td>Url</td>
               <td>Lib3</td>
-              <td>Kiev</td>
+                <div class="label">
+              <td>Ki</td>
               <td>urllib3</td>
             </tr>
+            </div>
             <tr>
               <td>5</td>
+            </tr>
               <td>LXML</td>
               <td>Parser</td>
               <td>USA</td>
@@ -87,12 +90,16 @@
           </tbody>
         </table>
       </div>
+      <div class="starter-template">
         <div class="collapse">
-          <pre   style="text-align:left">
+          <div class="label">
+          <pre style="text-align:left">
               python2.7 
           </pre>
+          </div>
           <p>Text</p>
         </div>
+      </div>
     </div><!-- /.container -->
 
 
