--- a/templates/contact.html
+++ b/templates/contact.html
@@ -32,7 +32,7 @@
             </ul>
           
         </nav>
-        <h1 class="text-muted">PyBursa</h1>
+        <h1 class="text-muted"><b>Contacts</b></h1>
       </div>
     </div>
     <div class="container">  
