--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Contacts of PDBursa</title>
+    <style> h2 {font-family: 'Times New Roman', Times, serif; font-size: 500%}
+    </style>
 
     <!-- Bootstrap -->
-    <link href="../../bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/style.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -17,8 +20,8 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
-    <nav class="navbar navbar-default">
+  <body class="fon">
+  <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -36,16 +39,42 @@
       <ul class="nav navbar-nav">
         <li><a href="index.html">Main</a></li>
         <li class="active"><a href="#">Contacts <span class="sr-only">(current)</span></a></li>
-        
-        
       </ul>
-      
-      
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
-</nav>
+  </nav>
+                
+  <div class="container marketing">
+
+      <!-- Three columns of text below the carousel -->
+    <div class="row">
+      <div class="col-lg-4">
+        <img class="img-circle" src="../static/images/director.png" width="140" height="140">
+        <h2>Director</h2>
+        <p>Name: Аксенова Алла</p>
+        <p>Skype: A_Aksyonova</p>
+        <p>Email: a_aks@gmail.com</p>
+        <p>Phon: +380501234567</p>
+      </div><!-- /.col-lg-4 -->
+      <div class="col-lg-4">
+        <img class="img-circle" src="../static/images/manager.png"  width="140" height="140">
+        <h2>Manager</h2>
+        <p>Name: Меделец Ирина</p>
+        <p>Skype: I_Medelec</p>
+        <p>Email: i_amed@gmail.com</p>
+        <p>Phon: +380509876543</p>
+      </div><!-- /.col-lg-4 -->
+      <div class="col-lg-4">
+        <img class="img-circle" src="../static/images/founder.png" width="140" height="140">
+        <h2>Founder</h2>
+        <p>Name: Свиридова Татьяна</p>
+        <p>Skype: T_Sviridova</p>
+        <p>Email: t_sv@gmail.com</p>
+        <p>Phon: +380502134687</p>
+      </div><!-- /.col-lg-4 -->
+    </div><!-- /.row --> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../../bootstrap/js/bootstrap.js"></script>
+    <script src="../static/js/bootstrap.js"></script>
   </body>
 </html>
