--- a/templates/index.html
+++ b/templates/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Main of PDBursa</title>
 
     <!-- Bootstrap -->
-    <link href="../../bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/style.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -17,8 +18,8 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
-    <nav class="navbar navbar-default">
+  <body id="backgr">
+  <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -36,23 +37,50 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Main <span class="sr-only">(current)</span></a></li>
         <li><a href="contact.html">Contacts</a></li>
-        
       </ul>
       
- 
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
-</nav>
+  </nav>
 <div class="container">
   <div class="jumbotron">
-    <h1>Hello, world!</h1>
-    <p>...</p>
-    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
-  </div>
+    <h1> PDBursa for you </h1>
+    <h2> Description </h2>
+    <p class="dline">В этом курсе мы сместили акцент в сторону практики.</p>
+    <p class="dline">Будет умеренное количество теории - максимум практики.</p>
+      <p class="dline">
+        Примерное соотношение теории и практики: 30% на 70%
+      </p>
+      <p class="dline">
+        Курсы будут проходить с 19 октября по 28 декабря.
+      </p>
+      <p class="dline">
+        Практические занятия в аудитории + онлайн лекции.
+      </p>
+      </div>
 </div> 
+<div class="container">
+  <div class="jumbotron">
+    <h2> Program </h2>
+    <h3 class="bold"> Занятие 1 </h3>
+    <p class="dline_1">Основы Python: zen, pep8, pylint, tools, IDE консоль, типы данных, операторы синтаксис управляющих конструкций (if, for...) исключения и разбор стектрейса кодировка в Python </p>
+    <h3 class="bold"> Занятие 2 </h3>
+    <p class="dline_1">Строки и итераторы: работа со строками и итерируемыми типами запуск скрипта и параметры git http://try.github.com/levels/</p>
+    <h3 class="bold"> Занятие 3 </h3>
+    <p class="dline_1">Функции и модульность: функции (def, lambda), генераторы списков, модули, структура</p>
+    <h3 class="bold"> Занятие 4 </h3>
+    <p class="dline_1">Основы ОПП, Классы: синтаксис, атрибуты, методы, нстанцирование, инкапсуляция, наследование, полиморфизм, переопределение методов, super, абстрактные классы, статические методы, все объект, служебные методы</p>
+    <h3 class="bold"> Занятие 5 </h3>
+    <p class="dline_1">Работа с файлами и датами: запись и чтение файлов методы объектов-файлов, csv, json, модуль datetime</p>
+    <h3 class="bold"> Занятие 6 </h3>
+    <p class="dline_1">Основы html, css, bootstrap, GIT</p>
+    <h3 class="bold"> Занятие 7 </h3>
+    <p class="dline_1">Django first steps: почему django? введение и описание фреймворка, старт проекта, команды manage.py, django.contrib, авторизация, django.contrib.auth, админка, статика</p>
+    </div>
+  </div> 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../../bootstrap/js/bootstrap.js"></script>
+    <script src="../static/js/bootstrap.js"></script>
   </body>
 </html>
