--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,14 +9,14 @@
      <link href="../static/css/bootstrap.css" rel="stylesheet">
 	 <link href="../static/css/style.css" rel="stylesheet">
      <script src="../static/js/bootstrap.js"></script>
-    <title>Contacts</title>
+    <title>Contact</title>
   </head>
 
   <body>
     <div class="black">
       <ul class="nav nav-tabs">
       <li role="presentation" ><a href="index.html">Main</a></li>
-      <li role="presentation" class="active"><a href="contacts.html">Contacts</a></li>
+      <li role="presentation" class="active"><a href="contact.html">Contacts</a></li>
       </ul>
 	  
       <h1 class="dt">Contacts</h1>
