--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
     <div class="black">
       <ul class="nav nav-tabs">
       <li role="presentation" class="active"><a href="index.html">Main</a></li>
-      <li role="presentation"><a href="contacts.html">Contacts</a></li>
+      <li role="presentation"><a href="contact.html">Contacts</a></li>
       </ul>
 	  
       <h1 class="dt">Description</h1>
