--- a/templates/contact.html
+++ b/templates/contact.html
@@ -39,6 +39,6 @@
 					   <span class="phone">Phone: 1111</span>
 	  </p>
       
-	<p class="end">THE END<p>
+	<p class="end">THE END</p>
     </div>
   </body>
