--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
       </ul>
 	  
       <h1 class="dt">Description</h1>
-      <p class="dfn">В данном курсе описывается что-то, много<p>
+      <p class="dfn">В данном курсе описывается что-то, много</p>
       <h2 class="dl">PyBursa</h2>
       <p class="text">This is very important. You will be able to write code:</p>
 	  <p class="code">original_string='wowbauhowDDDD'<br/>
@@ -321,7 +321,7 @@
           <td class="number_cell1">
             18
           </td>
-          <<td class="number_cell2">
+          <td class="number_cell2">
             Class-based (Generic) Views
           </td>
           <td class="number_cell3">
@@ -383,6 +383,6 @@
         </tr>
         </tbody>
       </table>
-	<p class="end">THE END<p>
+	<p class="end">THE END</p>
     </div>
   </body>
