--- a/templates/contact.html
+++ b/templates/contact.html
@@ -20,19 +20,22 @@
       </ul>
 	  
       <h1 class="dt">Contacts</h1>
-	  <p class="boss"> <span class="job">Director</span> </br>
+	  <h2 class="boss"><span class="job">Director</span></h2> </br>
+		<p>
 						<span class="name">Name: дядя </span> </br>
 					   <span class="skype">Skype: skype </span></br>
 					   <span class="email">Email: email@ukr.net</span></br>
 					   <span class="phone">Phone: 1111</span>
 	  </p>
-	  	 	  <p class="manager"> <span class="job">Manager</span> </br>
+	  	 	  <h2 class="manager"> <span class="job">Manager</span></h2> </br>
+			  <p>
 						<span class="name">Name: дядя </span> </br>
 					   <span class="skype">Skype: skype </span></br>
 					   <span class="email">Email: email@ukr.net</span></br>
 					   <span class="phone">Phone: 1111</span>
 	  </p>
-	  	  	  <p class="founder"> <span class="job">Founder</span> </br>
+	  	  	  <h2 class="founder"> <span class="job">Founder</span></h2> </br>
+			  <p>
 						<span class="name">Name: дядя </span> </br>
 					   <span class="skype">Skype: skype </span></br>
 					   <span class="email">Email: email@ukr.net</span></br>
