--- a/templates/contact.html
+++ b/templates/contact.html
@@ -41,7 +41,7 @@
 					   <span class="email">Email: email@ukr.net</span></br>
 					   <span class="phone">Phone: 1111</span>
 	  </p>
-      <p>Not finished - yes</p>
+      <p>Not finished - yes- 2</p>
 	<p class="end">THE END</p>
     </div>
   </body>
