--- a/templates/index.html
+++ b/templates/index.html
@@ -19,9 +19,9 @@
       <li role="presentation"><a href="contact.html">Contacts</a></li>
       </ul>
 	  
-      <h1 class="dt">Description</h1>
-      <p class="dfn">В данном курсе описывается что-то, много</p>
+	<h1>Description</h1>
       <h2 class="dl">PyBursa</h2>
+	        <p class="dfn">В данном курсе описывается что-то, много</p>
       <p class="text">This is very important. You will be able to write code:</p>
 	  <p class="code">original_string='wowbauhowDDDD'<br/>
 		reverse_string=list(original_string)[::-1]<br/>
